force-app/main/default/objects/qb_Metadata__mdt/qb_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>Quickbooks</label>
    <pluralLabel>Quickbooks</pluralLabel>
</CustomObject>