force-app/main/default/objects/qb_Metadata__mdt/fields/Company_Info__c.field-meta.xml
<CustomField>
    <fullName>Company_Info__c</fullName>
    <defaultValue>&quot;/v3/company/{realmId}/companyinfo/{realmId}&quot;</defaultValue>
    <label>Company Info</label>
    <type>Url</type>
</CustomField>