force-app/main/default/objects/qb_Metadata__mdt/fields/Create_Bill__c.field-meta.xml
<CustomField>
    <fullName>Create_Bill__c</fullName>
    <defaultValue>&quot;/v3/company/{realmId}/bill?minorversion=&quot;</defaultValue>
    <label>Create Bill</label>
    <type>Url</type>
</CustomField>