force-app/main/default/objects/qb_Metadata__mdt/fields/Create_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Create_Estimate__c</fullName>
    <defaultValue>&quot;/v3/company/{realmId}/estimate?minorversion=&quot;</defaultValue>
    <label>Create Estimate</label>
    <type>Url</type>
</CustomField>