force-app/main/default/objects/qb_Metadata__mdt/fields/Create_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Create_Vendor__c</fullName>
    <defaultValue>&quot;/v3/company/{realmId}/vendor?minorversion=&quot;</defaultValue>
    <label>Create Vendor</label>
    <type>Url</type>
</CustomField>