force-app/main/default/objects/qb_Metadata__mdt/fields/expires_in__c.field-meta.xml
<CustomField>
    <fullName>expires_in__c</fullName>
    <label>expires_in</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>