force-app/main/default/objects/qb_Metadata__mdt/fields/minorversion__c.field-meta.xml
<CustomField>
    <fullName>minorversion__c</fullName>
    <label>minorversion</label>
    <length>4</length>
    <type>Text</type>
</CustomField>