force-app/main/default/objects/qb_Metadata__mdt/fields/Prod_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Prod_Base_URL__c</fullName>
    <defaultValue>&quot;https://quickbooks.api.intuit.com&quot;</defaultValue>
    <label>Production Base URL</label>
    <type>Url</type>
</CustomField>