force-app/main/default/objects/qb_Metadata__mdt/fields/realmId__c.field-meta.xml
<CustomField>
    <fullName>realmId__c</fullName>
    <label>realmId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>