force-app/main/default/objects/qb_Metadata__mdt/fields/token_url__c.field-meta.xml
<CustomField>
    <fullName>token_url__c</fullName>
    <defaultValue>&quot;https://oauth.platform.intuit.com/oauth2/v1/tokens/bearer&quot;</defaultValue>
    <label>token url</label>
    <type>Url</type>
</CustomField>